prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/multiline_comment_col.diag.txt
ERROR: expected '('
testData/diagnostics/multiline_comment_col.nut:3:26

   line
   comment  */ local x = @!@
                          ^


